--- a/assets/css/jekyll-theme-chirpy.scss
+++ b/assets/css/jekyll-theme-chirpy.scss
@@ -7,11 +7,7 @@ $sidebar-text-color: #ffffff; // Reines Weiß (für Sidebar-Text, Ränder der So
 $sidebar-border-color: #aa0000; // Etwas dunkleres Rot für den Rand der Sidebar
 
 /* prettier-ignore */
-@use 'main
-{%- if jekyll.environment == 'production' -%}
-  .bundle
-{%- endif -%}
-';
+@use 'main';
 
 // ***************************************************************
 // `@use "sass:color";` MUSS HIER STEHEN, NACH @use 'main'!
